--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,27 +1,27 @@
-<html >
 <html>
-    <head> 
-        <link th:href="@{/form-stylesheet.css}" rel="stylesheet"> 
-    </head>    
-    <body>
-        <div class="topnav">
-            <a class="active">Form</a>
-            <a>Inventory</a>
-        </div>
-        <div class="container">    
-            <h2> Global Superstore </h2>
-            <form method="post">
-                <select class="select">
-                    <option style="color:blue">Choose Category</option>
-                    <option> Placeholder </option>
-                </select>
-                <input type="text" placeholder="Name">
-                <input class="half" type="text" placeholder="Price">
-                <input class="half" type="text" placeholder="Discount">
-                <h4>Order Date</h4>
-                <input type="date" style="color:black">
-                <input type="submit" value="Submit Item">
-            </form>
-        </div>      
-    </body>
+<html>
+<head>
+	<link rel="stylesheet" th:href="@{/form-stylesheet.css}">
+</head>
+<body>
+	<div class="topnav">
+		<a class="active" th:href="@{/}">Form</a>
+		<a th:href="@{/inventory}">Inventory</a>
+	</div>
+	<div class="container">
+		<h2> Global Superstore </h2>
+		<form method="post" th:action="@{/submitItem}" th:object="${item}">
+			<select class="select" th:field="*{category}">
+				<option style="color:blue" value="">Choose Category</option>
+				<option th:each="category :${categories} " th:text="${category}" th:value="${category}"></option>
+			</select>
+			<input placeholder="Name" th:field="*{name}" type="text">
+			<input class="half" placeholder="Price" th:field="*{price}" type="text">
+			<input class="half" placeholder="Discount" th:field="*{discount}" type="text">
+			<h4>Order Date</h4>
+			<input style="color:black" th:field="*{date}" type="date">
+			<input type="submit" value="Submit Item">
+		</form>
+	</div>
+</body>
 </html>
